Gradle task has been done.

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,14 @@
-//add everything here
+plugins {
+    id 'java'
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation "org.apache.commons:commons-lang3:3.12.0"
+}
 
 test {
     useJUnitPlatform()
