--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,38 +1,40 @@
 plugins {
-    // id for library
-    // id for maven to publish jar to local repository
+    id 'java-library'
+    id 'maven-publish'
 }
 
+group 'com.example.utils'
+version '1.3.5'
+
 java {
-// provide sourceCompatibility
+    sourceCompatibility = JavaVersion.VERSION_11
 }
 
 repositories {
-// provide repository, where required dependencies are located
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+            groupId 'com.example.utils'
+            artifactId 'utils'
+            version '1.3.5'
 
             from components.java
         }
     }
 }
 
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
-
 jar {
     manifest {
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes(
+                'Implementation-Title': 'StringUtils',
+                'Implementation-Version': '1.0'
+        )
     }
 }
-
-test {
-    useJUnitPlatform()
-}
-
-publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
